fixed z-index for cog, edited widget list page

--- a/public/assignment/css/style.css
+++ b/public/assignment/css/style.css
@@ -109,6 +109,7 @@ img {
     padding-left: 3px;
     background-color: white;
     border-bottom-left-radius: 20%;
+    z-index: 1;
 }
 
 .widget-div {
@@ -129,7 +130,3 @@ img {
     width: 100%;
     height: 100%;
 }
-
-/*.navbar-icons-widget-list.glyphicon {*/
-    /*top: 10px;*/
-/*}*/
